feat: first prod ready version

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -12,16 +12,40 @@ frontend ws_in
     bind :8080
     mode http
 
+    # Handle CORS preflight (OPTIONS) requests with headers on the response
+    http-request return status 204 hdr Access-Control-Allow-Origin "*" hdr Access-Control-Allow-Methods "GET, POST, OPTIONS" hdr Access-Control-Allow-Headers "Content-Type, Authorization" if METH_OPTIONS
+
+    # Ensure CORS headers on every response (not just OPTIONS)
+    http-response set-header Access-Control-Allow-Origin "*"
+    http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
+    http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
+
     # extract room_id automatically and set txn.backend_name
     http-request lua.route_ws
 
     # route to backend selected by Lua
     use_backend %[var(txn.backend_name)]
 
+backend server0
+    mode http
+    # Add CORS headers to responses from backend
+    http-response set-header Access-Control-Allow-Origin "*"
+    http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
+    http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
+    server ws0 127.0.0.1:4001
+
 backend server1
     mode http
-    server ws1 127.0.0.1:3000
+    # Add CORS headers to responses from backend
+    http-response set-header Access-Control-Allow-Origin "*"
+    http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
+    http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
+    server ws1 127.0.0.1:4000
 
 backend server2
     mode http
+    # Add CORS headers to responses from backend
+    http-response set-header Access-Control-Allow-Origin "*"
+    http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
+    http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
     server ws2 127.0.0.1:8000
