feat: modified HaProxy proxy to be compatible with render

--- a/proxy/local-proxy/haproxy.cfg
+++ b/proxy/local-proxy/haproxy.cfg
@@ -1,7 +1,5 @@
-# production proxy
-
 global
-    lua-load /usr/local/etc/haproxy/router.lua
+    lua-load proxy/router.lua
 
 defaults
     mode http
@@ -11,7 +9,7 @@ defaults
     option http-keep-alive
 
 frontend ws_in
-    bind :10000
+    bind :8080
     mode http
 
     # Handle CORS preflight (OPTIONS) requests with headers on the response
@@ -28,15 +26,13 @@ frontend ws_in
     # route to backend selected by Lua
     use_backend %[var(txn.backend_name)]
 
-    default_backend server0
-
 backend server0
     mode http
     # Add CORS headers to responses from backend
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
-    server rank-rat-sink-server.internal:10000
+    server ws0 127.0.0.1:4001
 
 backend server1
     mode http
@@ -44,7 +40,7 @@ backend server1
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
-    server ws1 rank-rat-game-server-alpha.internal:10000
+    server ws1 127.0.0.1:4000
 
 backend server2
     mode http
@@ -52,4 +48,4 @@ backend server2
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
-    server ws2 rank-rat-game-server-beta.internal:10000
+    server ws2 127.0.0.1:8000
