--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -36,7 +36,7 @@ backend server0
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
-    server sink rank-rat-sink-server.internal:10000
+    server sink rank-rat-sink-server:10000
 
 backend server1
     mode http
@@ -44,7 +44,7 @@ backend server1
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
-    server ws1 rank-rat-game-server-alpha.internal:10000
+    server ws1 rank-rat-game-server-alpha:10000
 
 backend server2
     mode http
@@ -52,4 +52,4 @@ backend server2
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
-    server ws2 rank-rat-game-server-beta.internal:10000
+    server ws2 rank-rat-game-server-beta:10000
