--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -36,7 +36,7 @@ backend server0
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
-    server sink rank-rat-sink-server:10000
+    server sink rank-rat:10000
 
 backend server1
     mode http
