fix: introduced workaround for redis connection behavior in lua

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -10,44 +10,50 @@ defaults
     timeout server  1h
     option http-keep-alive
 
+# RESOLVERS (Required for Render.com/AWS DNS resolution)
+resolvers docker_dns
+    parse-resolv-conf
+    resolve_retries 3
+    timeout resolve 1s
+    hold valid 10s
+
+# Redis internal route
+listen redis_bridge
+    bind 127.0.0.1:6379
+    mode tcp
+    # HAProxy handles the DNS resolution here asynchronously
+    server redis_main red-d4v3gdre5dus73a6bke0:6379 check inter 5s resolvers docker_dns
+
+# main routing logic
 frontend ws_in
     bind :10000
     mode http
 
-    # Handle CORS preflight (OPTIONS) requests with headers on the response
+    # Handle CORS preflight (OPTIONS)
     http-request return status 204 hdr Access-Control-Allow-Origin "*" hdr Access-Control-Allow-Methods "GET, POST, OPTIONS" hdr Access-Control-Allow-Headers "Content-Type, Authorization" if METH_OPTIONS
 
-    # Ensure CORS headers on every response (not just OPTIONS)
+    # CORS headers on responses
     http-response set-header Access-Control-Allow-Origin "*"
     http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
     http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
 
-    # extract room_id automatically and set txn.backend_name
+    # Execute Lua to route logic
     http-request lua.route_ws
 
-    # route to backend selected by Lua
+    # Route based on variable set by Lua
     use_backend %[var(txn.backend_name)]
 
+# ---------------------------------------------------------------------
+# BACKENDS
+# ---------------------------------------------------------------------
 backend server0
     mode http
-    # Add CORS headers to responses from backend
-    http-response set-header Access-Control-Allow-Origin "*"
-    http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
-    http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
     server sink rank-rat:10000
 
 backend server1
     mode http
-    # Add CORS headers to responses from backend
-    http-response set-header Access-Control-Allow-Origin "*"
-    http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
-    http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
     server ws1 rank-rat-game-server-alpha:10000
 
 backend server2
     mode http
-    # Add CORS headers to responses from backend
-    http-response set-header Access-Control-Allow-Origin "*"
-    http-response set-header Access-Control-Allow-Methods "GET, POST, OPTIONS"
-    http-response set-header Access-Control-Allow-Headers "Content-Type, Authorization"
     server ws2 rank-rat-game-server-beta:10000
