fix: fixed haproxy parsing issue

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -1,5 +1,3 @@
-# production proxy
-
 global
     lua-load /usr/local/etc/haproxy/router.lua
 
@@ -10,21 +8,27 @@ defaults
     timeout server  1h
     option http-keep-alive
 
+# ---------------------------------------------------------------------
 # RESOLVERS (Required for Render.com/AWS DNS resolution)
+# ---------------------------------------------------------------------
 resolvers docker_dns
     parse-resolv-conf
     resolve_retries 3
     timeout resolve 1s
     hold valid 10s
 
-# Redis internal route
+# ---------------------------------------------------------------------
+# REDIS BRIDGE (Lua -> Localhost -> Real Redis)
+# ---------------------------------------------------------------------
 listen redis_bridge
     bind 127.0.0.1:6379
     mode tcp
     # HAProxy handles the DNS resolution here asynchronously
     server redis_main red-d4v3gdre5dus73a6bke0:6379 check inter 5s resolvers docker_dns
 
-# main routing logic
+# ---------------------------------------------------------------------
+# MAIN WEBSOCKET FRONTEND
+# ---------------------------------------------------------------------
 frontend ws_in
     bind :10000
     mode http
