--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -24,7 +24,7 @@ listen redis_bridge
     bind 127.0.0.1:6379
     mode tcp
     # HAProxy handles the DNS resolution here asynchronously
-    server redis_main red-d4v3gdre5dus73a6bke0:6379 check inter 5s resolvers docker_dns
+    server redis_main red-d4v3gdre5dus73a6bke0:uFtwuERVlIQjuGsFEcOz4sXoExDIq4yY@virginia-keyvalue.render.com:6379 check inter 5s resolvers docker_dns
 
 # ---------------------------------------------------------------------
 # MAIN WEBSOCKET FRONTEND
