fix: trying direct connection string

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -20,11 +20,11 @@ resolvers docker_dns
 # ---------------------------------------------------------------------
 # REDIS BRIDGE (Lua -> Localhost -> Real Redis)
 # ---------------------------------------------------------------------
-listen redis_bridge
-    bind 127.0.0.1:6379
-    mode tcp
-    # HAProxy handles the DNS resolution here asynchronously
-    server redis_main red-d4v3gdre5dus73a6bke0:6379 check inter 5s resolvers docker_dns
+# listen redis_bridge
+#     bind 127.0.0.1:6379
+#     mode tcp
+#     # HAProxy handles the DNS resolution here asynchronously
+#     server redis_main red-d4v3gdre5dus73a6bke0:6379 check inter 5s resolvers docker_dns
 
 # ---------------------------------------------------------------------
 # MAIN WEBSOCKET FRONTEND
