fix: add external redis again

--- a/proxy/haproxy.cfg
+++ b/proxy/haproxy.cfg
@@ -24,7 +24,7 @@ listen redis_bridge
     bind 127.0.0.1:6379
     mode tcp
     # HAProxy handles the DNS resolution here asynchronously
-    server redis_main red-d4v3gdre5dus73a6bke0:6379 check inter 5s resolvers docker_dns
+    server redis_main redis-16745.c16.us-east-1-3.ec2.cloud.redislabs.com:16745 check inter 5s resolvers docker_dns init-addr last,libc,none
 
 # ---------------------------------------------------------------------
 # MAIN WEBSOCKET FRONTEND
